--- a/frontend/astraFront/src/style/components/index.scss
+++ b/frontend/astraFront/src/style/components/index.scss
@@ -1,8 +1,6 @@
 //cspell:disable
-@import '../styles/components/appbar.scss';
-@import './settings.scss';
-@import '../styles/components/footer.scss';
-@import "./components/bouton.scss";
-@import "./components/presentation.scss";
-@import "./components/priserdvbtn.scss";
-@import "./components/divgauche.scss";
+@import '/AstraScriptum/frontend/astraFront/src/style/components/appbar.scss';
+@import '/AstraScriptum/frontend/astraFront/src/style/settings';
+@import '/AstraScriptum/frontend/astraFront/src/style/components/footer.scss';
+@import '/AstraScriptum/frontend/astraFront/src/style/components/bouton';
+@import '/AstraScriptum/frontend/astraFront/src/style/components/bouton';
