Ajout page de conseils pratiques

--- a/frontend/astraFront/src/style/components/index.scss
+++ b/frontend/astraFront/src/style/components/index.scss
@@ -3,4 +3,5 @@
 @import '../settings';
 @import './footer.scss';
 @import './bouton';
-@import './HomePage.scss'
+@import './HomePage.scss';
+@import './Animated.scss';
